# data_analytic_chatbot

chatbot/: app.py  pyproject.toml  requirements.txt
chatbot/mcp-client/: helper_functions.py  main.py
chatbot/mcp-server/: rag_mcp.py  server.py  sql_mcp.py  tool_source.json  utilities_mcp.py
chatbot/mcp-server/files/chroma_db/a76a9201-535e-42a3-9677-e1bb963ffccd/: index_metadata.pickle
website/: README.md
website/laravel-src/app/Events/: MessageSent.php
website/laravel-src/app/Http/Controllers/chat/: ConversationController.php  MessageController.php
website/laravel-src/app/Models/: Conversation.php  Message.php  User.php
website/laravel-src/app/Providers/: AppServiceProvider.php
website/laravel-src/bootstrap/: app.php
website/laravel-src/config/: broadcasting.php
website/laravel-src/routes/: api.php  channels.php
website/react-src/src/: App.jsx
website/react-src/src/components/: ClaudeInterface.jsx  ConversationList.jsx  MessageInput.jsx  MessageList.jsx  Sidebar.jsx
website/react-src/src/components/hooks/: useChat.js
website/react-src/src/components/services/: api.js
website/react-src/src/components/styles/: MessageList.module.css
