[project]
name = "da-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.7",
    "fastapi>=0.115.9",
    "fastmcp>=2.2.5",
    "flask>=3.1.0",
    "langchain-community>=0.3.22",
    "langchain-text-splitters>=0.3.8",
    "mcp[cli]>=1.6.0",
    "mysql-connector-python>=9.3.0",
    "openai>=1.76.0",
    "pymupdf>=1.25.5",
]